[tool.poetry]
name = "pybuild-deps"
version = "0.0.4"
description = "A simple tool for detection of PEP-517 build dependencies."
authors = ["Bruno Ciconelle <fsouza.bruno@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/bruno-fs/pybuild-deps"
repository = "https://github.com/bruno-fs/pybuild-deps"
documentation = "https://pybuild-deps.readthedocs.io"
classifiers = ["Development Status :: 3 - Alpha"]

[tool.poetry.urls]
Changelog = "https://github.com/bruno-fs/pybuild-deps/releases"

[tool.poetry.dependencies]
python = "^3.8"
click = ">=8.0.1"
tomli = { version = "^2.0.1", python = "<3.11" }
xdg = "*"
requests = "*"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
black = ">=21"
coverage = { extras = ["toml"], version = ">=6.2" }
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = { extras = ["colors"], version = ">=0.15.10" }
myst-parser = { version = ">=0.16.1" }
ruff = "^0.0.235"
pytest-mock = "^3.10.0"

[tool.poetry.scripts]
pybuild-deps = "pybuild_deps.__main__:cli"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["pybuild_deps", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff]
select = [
    "B",   # bugbear
    "C90", # mccabe complexity
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "PGH", # pygrep-hooks
    "Q",   # flake8-quotes
    "RUF", # ruff specific checks
    "S",   # bandit
    "UP",  # pyupgrade
    "W",   # pycodestyle
]
ignore = ["D203"]
src = ["src", "tests"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"**/test_*.py" = ["S101"]

[tool.ruff.isort]
known-first-party = ["pybuild_deps", "test"]

[tool.ruff.mccabe]
max-complexity = 9

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
